layer0/apps/perceptiq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perceptiq
  namespace: perceptiq
spec:
  selector:
    app: perceptiq
  ports:
    - port: 80
      targetPort: 3000
